fix alignment

--- a/client/src/components/HomeScreen/home-screen.module.scss
+++ b/client/src/components/HomeScreen/home-screen.module.scss
@@ -1,3 +1,4 @@
-.niceClass{
-    background-color: rgb(255, 13, 13);
+.homeScreenContainer{
+    display: flex;
+    flex-direction: column;
 }
